# ProCamera

./: .gitattributes  .gitignore  CameraMeatadata、CaptureRequest、CaptureResult.xlsx  README.md  README.md.bak  build.gradle  config.gradle  default.gradle  document.docx  gradle.properties  gradlew  gradlew.bat  import-summary.txt  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: TestJsBridge
app/src/main/res/anim/: dialog_load_animation.xml  rotate_imageview.xml
app/src/main/res/drawable/: btn_flash_auto.xml  btn_flash_off.xml  btn_flash_torch.xml  btn_shutter_camera.xml  btn_shutter_record.xml  btn_shutter_recording.xml  check_selector.xml  progress_holo_light.xml
app/src/main/res/layout/: activity_album.xml  activity_base.xml  activity_camera.xml  activity_film.xml  activity_imageprocess.xml  activity_main.xml  activity_setting.xml  activity_test.xml  activity_toolbar.xml  activity_web_view.xml  aty_beauty.xml  aty_cut.xml  aty_filter.xml  aty_image_process.xml  aty_mine.xml  aty_subtitle.xml  dialogfragment_filter_menu.xml  dialogfragment_flashselect.xml  dialogfragment_hdrselect.xml  dialogfragment_imagefolders.xml  dialogfragment_imageprocess_tools.xml  dialogfragment_modeselect.xml  dialogfragment_ratioselect.xml  focusview.xml  fragment_camera2.xml  fragment_camera2_basic.xml  fragment_recordvideo.xml  grid_item_picture.xml  item_gallery_film.xml  item_gridimage.xml  item_recycler_main.xml  item_text_grid.xml  layout_common_recycler.xml  layout_common_title.xml  layout_dialog.xml  (+21 more)
baseactivity/: build.gradle  gradle.properties
baseactivity/src/main/: AndroidManifest.xml
cardlibrary/: build.gradle
cardlibrary/src/main/: AndroidManifest.xml
commonlibrary/: build.gradle
commonlibrary/src/main/: AndroidManifest.xml
commonutillibrary/: build.gradle  proguard-rules.pro
commonutillibrary/src/main/: AndroidManifest.xml
data/: json.txt
gradle/wrapper/: gradle-wrapper.properties
imageprocesslibrary/: CMakeLists.txt  build.gradle
imageprocesslibrary/src/androidTest/java/com/eighteengray/imageprocesslibrary/: ExampleInstrumentedTest.java
imageprocesslibrary/src/main/: AndroidManifest.xml
imageprocesslibrary/src/main/cpp/: com_eighteengray_imageprocesslibrary_ImageProcessJni.h  imageprocess-lib.cpp  imageprocess.cpp
imageprocesslibrary/src/main/cpp/include/: com_eighteengray_imageprocesslibrary_ImageProcessJni.h
imageprocesslibrary/src/main/java/com/eighteengray/imageprocesslibrary/: ImageProcessBaseActivity.java  ImageProcessByOpenCv.java  ImageProcessJni.java  ImageProcessUtils.java  ImageUtils.java
imageprocesslibrary/src/main/java/com/eighteengray/imageprocesslibrary/bean/: Image.java
imageprocesslibrary/src/main/java/com/eighteengray/imageprocesslibrary/bitmapfilter/: BaseBitmapFilter.java  ColorBitmapFilter.java  GrayBitmapFilter.java  IBitmapFilter.java  RedBitmapFilter.java  ReverseBitmapFilter.java  YellowBitmapFilter.java
imageprocesslibrary/src/main/java/com/eighteengray/imageprocesslibrary/cvdemo/: CVTestActivity.java  DefaultSkinFinder.java  FaceExtraLayer.java  ImageProcessByOpenCv.java  ImageProcessOpenCv.java  ImageProcessOpenCv2.java  ImageSelectUtils.java  OpenCv2.java  OpenCv34.java  OpenCv5.java  OpenCv6.java  OpenCv89.java  SkinFinder.java
imageprocesslibrary/src/main/java/com/eighteengray/imageprocesslibrary/cvdemo/camera/: CameraViewActivity.java  DisplayModeActivity.java  EyeRenderActivity.java  MyCvCameraView.java
imageprocesslibrary/src/main/java/com/eighteengray/imageprocesslibrary/imagefilter/: BaseImageFilter.java  BlackWhiteFilter.java  BrightContrastFilter.java  ColorToneFilter.java  FeatherFilter.java  FilmFilter.java  GaussianBlurFilter.java  Gradient.java  GradientFilter.java  GradientMapFilter.java  HslColor.java  HslModifyFilter.java  IImageFilter.java  IceFilter.java  Image.java  ImageBlender.java  IncreaseProcessImage.java  LightFilter.java  LomoFilter.java  NoiseFilter.java  OriginFilter.java  PaintBorderFilter.java  Palette.java  RadialDistortionFilter.java  SaturationModifyFilter.java  SceneFilter.java  SharpFilter.java  VignetteFilter.java
imageprocesslibrary/src/main/java/com/eighteengray/imageprocesslibrary/imagefilter/concretefilter/: BannerFilter.java  BlackWhiteFilter.java  BrightContrastFilter.java  ColorToneFilter.java  FeatherFilter.java  FilmFilter.java  Gradient.java  GradientFilter.java  HslModifyFilter.java  IceFilter.java  ImageBlender.java  InvertFilter.java  LightFilter.java  MirrorFilter.java  MosaicFilter.java  NoiseFilter.java  OriginFilter.java  PaintBorderFilter.java  RadialDistortionFilter.java  SaturationModifyFilter.java  SceneFilter.java  SharpFilter.java  VideoFilter.java  VignetteFilter.java  WaterWaveFilter.java  ZoomBlurFilter.java
imageprocesslibrary/src/main/java/com/eighteengray/imageprocesslibrary/imageprocess/: JniExample.java
imageprocesslibrary/src/main/java/com/eighteengray/imageprocesslibrary/java/: ImageUtils.java
imageprocesslibrary/src/main/java/com/eighteengray/imageprocesslibrary/java/bitmapfilter/: ColorBitmapFilter.java  GrayBitmapFilter.java  IBitmapFilter.java  RedBitmapFilter.java  ReverseBitmapFilter.java  YellowBitmapFilter.java
imageprocesslibrary/src/main/java/com/eighteengray/imageprocesslibrary/jni/: JniExample.java
imageprocesslibrary/src/main/res/layout/: activity_cvtest.xml  activity_eye_render.xml  camera_view_activity.xml  display_mode_activity.xml
imageprocesslibrary/src/main/res/menu/: menu_camera.xml  menu_charpter_ten.xml
imageprocesslibrary/src/main/res/raw/: nums.traineddata
imageprocesslibrary/src/main/res/values/: strings.xml
imageprocesslibrary/src/test/java/com/eighteengray/imageprocesslibrary/: ExampleUnitTest.java
mdwidgetlibrary/: build.gradle
mdwidgetlibrary/src/main/: AndroidManifest.xml
openCVLibrary330/: build.gradle
openCVLibrary330/src/main/: AndroidManifest.xml
openCVLibrary345/: build.gradle
openCVLibrary345/src/main/: AndroidManifest.xml
procameralibrary/: build.gradle
procameralibrary/src/main/: AndroidManifest.xml
(+334 files in other folders)
